# ProboSed

./: .gitignore  01_labeling.ipynb  02_toy_model.ipynb  03_sensitivity.ipynb  04_geochem.ipynb  CITATION.cff  LICENSE  Pyproject.toml  README.md  REQUIREMENTS.txt  _init__.py  pyproject.toml  root__init__.py
core_ml/: __init__.py  labeler.py
geochem/: __init__.py  geochem_analysis.py
notebooks/: 01_JCORES_VCD_Mining.ipynb  01_labeling.ipynb  02_toy_model.ipynb  03_sensitivity.ipynb  04_geochem (1).ipynb  04_geochem.ipynb  05_mtd_quantification.ipynb  Main_Workflow.ipynb
probosed/core_ml/: labeler.py
probosed/slope/probosed/: __init__.py
slope/: __init__.py  sensitivity_run.py  stability.py  toy_model.py
transport/: __init__.py  agents.py
utils/: __init__.py  patcher.py
