[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probosed"
version = "0.1.0"
description = "Probabilistic sediment transport and slope failure modeling for marine geohazards"
authors = [
  {name = "Rene Castillo", email = "castillo.271@buckeyemail.osu.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

keywords = [
  "marine geology",
  "submarine landslides",
  "sediment transport",
  "probabilistic modeling",
  "geohazards"
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/rocknrene/probosed"
Repository = "https://github.com/rocknrene/probosed"
